--- a/styles css/BLEU/style.css
+++ b/styles css/BLEU/style.css
@@ -1,8 +1,7 @@
 /* Var-section and mixing */
-/* scss language */
 body {
   font: 100% "Space Mono", monospace;
-  color: #2748b3;
+  color: blue;
   margin: 0px;
   padding: 0px;
   background-color: #000;
@@ -10,6 +9,70 @@ body {
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   background-attachment: fixed;
+}
+
+body button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 16px;
+  margin: 20px 5px;
+}
+
+body button .red {
+  display: inline-block;
+  color: white;
+  background-color: red;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+body button .red :visited, body button .red :link {
+  color: red;
+}
+
+body button .red :active, body button .red :hover {
+  color: red;
+}
+
+body button .bleu {
+  display: inline-block;
+  color: white;
+  background-color: blue;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+body button .bleu :visited, body button .bleu :link {
+  color: blue;
+}
+
+body button .bleu :active, body button .bleu :hover {
+  color: blue;
 }
 
 body article {
@@ -70,16 +133,10 @@ body article pre .after {
 }
 
 body article h1 {
-  color: #6b8eff;
   text-align: center;
 }
 
-body article h2 {
-  color: #6b8eff;
-}
-
 body article h6 {
-  color: #6b8eff;
   text-align: center;
   font-size: 2em;
   padding: 32px;
