--- a/styles css/BLEU/_nest.scss
+++ b/styles css/BLEU/_nest.scss
@@ -66,8 +66,7 @@ body {
             margin-top: 3%;
             margin-bottom: 3%;
             :visited, :link {
-                @include Button(blue);
-                color: $color-name;
+                color: blue;
             }
             :active, :hover {
                 color: blue
