--- a/styles css/RED/_red.scss
+++ b/styles css/RED/_red.scss
@@ -46,8 +46,7 @@ body {
             margin-top: 3%;
             margin-bottom: 3%;
                 :visited, :link {
-                    @include Button (red);
-                    color: $color-name;
+                    color: red;
                 }
                 :active, :hover {
                     color: red;
